# voicetype

./: .gitignore  BRAINDUMP.md  CHANGELOG.md  CLAUDE.MD  MODEL-COMPATIBILITY.md  RELEASING.md  build-whisper.ps1  index.html  make_icons.py  package-lock.json  package.json  pill.html  vite.config.ts
.claude/skills/bundle-release/: SKILL.md
.github/workflows/: release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  STATE.md.bak-2026-03-01T02-06-52  config.json
.planning/debug/: .continue-here.md  cuda-dlls-missing-after-install.md  firstrun-progress-bar-broken.md  hook-phase15-issues.md  model-selector-download-broken.md  moonshine-v2-streaming-encoder-broadcast-error.md  msvc-crt-linker-mismatch-resolved.md  nvcuda-dll-missing-on-non-nvidia.md  parakeet-gather-oob-on-engine-switch-resolved.md  parakeet-transcription-silent-resolved.md  pill-move-mode-broken.md  pill-shortcut-after-move-mode.md  pill-window-not-appearing-resolved.md
.planning/debug/resolved/: hook-init-fallback-on-startup.md  stuck-win-key-paste-failure.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.1-REQUIREMENTS.md  v1.2-REQUIREMENTS.md  v1.3-REQUIREMENTS.md  v1.4-REQUIREMENTS.md  v1.5-REQUIREMENTS.md  v1.5-ROADMAP.md
.planning/phases/01-foundation/: 01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md
.planning/phases/02-audio-whisper/: .continue-here.md  02-01-SUMMARY.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-VERIFICATION.md
.planning/phases/03-core-pipeline/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-SUMMARY.md  03-CONTEXT.md
.planning/phases/04-pill-overlay/: 04-01-PLAN.md  04-02-SUMMARY.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/04.1-premium-pill-overlay-ui-polish/: 04.1-01-PLAN.md  04.1-01-SUMMARY.md  04.1-02-PLAN.md  04.1-CONTEXT.md
.planning/phases/05-vad-toggle-mode/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md  05-VERIFICATION.md
.planning/phases/06-vocabulary-settings/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-SUMMARY.md  06-03-SUMMARY.md  06-04-PLAN.md  06-04-SUMMARY.md
.planning/phases/06.1-fix-duplicate-tray-icons-and-replace-default-square-icon-with-proper-app-icon/: 06.1-01-PLAN.md  06.1-01-SUMMARY.md  06.1-CONTEXT.md  06.1-RESEARCH.md  06.1-VERIFICATION.md
.planning/phases/06.2-premium-waveform-visualization-upgrade/: 06.2-01-PLAN.md  06.2-01-SUMMARY.md  06.2-02-PLAN.md  06.2-CONTEXT.md  06.2-RESEARCH.md
.planning/phases/07-distribution/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-SUMMARY.md  07-CONTEXT.md  07-RESEARCH.md
.planning/phases/08-add-parakeet-tdt-model-and-optimize-transcription-latency/: .continue-here.md  08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-03-PLAN.md  08-03-SUMMARY.md  08-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
artifacts/research/: 2026-02-27-voice-to-text-desktop-tool-technical.md  2026-02-28-pill-rounded-corner-haziness-fix-technical.md  2026-02-28-pipeline-latency-optimization-technical.md  2026-02-28-premium-waveform-visualization-options.md  2026-03-01-review-ai-slop.md  2026-03-01-review-architecture.md  2026-03-01-review-bug-hunter.md  2026-03-01-review-consolidated-summary.md  2026-03-01-review-performance.md  2026-03-01-review-security.md  2026-03-01-review-silent-failures.md  2026-03-01-review-simplification.md  2026-03-01-review-standards.md  2026-03-01-review-type-design.md  2026-03-01-sub-500ms-transcription-latency-technical.md  2026-03-02-ctrl-win-modifier-only-hotkey-feasibility.md  2026-03-02-model-benchmark-charts.html  2026-03-02-model-benchmark-comparison-deep-dive.md  2026-03-02-structural-engineering-speech-to-text-misrecognitions.md  2026-03-02-tauri-app-update-distribution-options.md  2026-03-02-wh-keyboard-ll-hook-integration-feasibility.md  2026-03-02-whisper-large-speed-optimization-technical.md  2026-03-02-whisper-smaller-model-alternatives-technical.md  2026-03-03-distil-whisper-ggml-compatibility-feasibility.md  2026-03-03-two-installer-cpu-gpu-feasibility.md  2026-03-03-two-installer-implementation-summary.md  2026-03-04-local-llm-transcription-refinement-feasibility.md  2026-03-04-progressive-chunk-transcription-feasibility.md  2026-03-06-auto-detect-caps-lock-feasibility.md  2026-03-06-post-transcription-case-toggle-feasibility.md
prompts/: 001-ui-redesign.md
src/: App.tsx  Pill.tsx  pill-main.tsx  pill.css  styles.css
src-tauri/: Cargo.toml  benchmark-results.md  build.rs  tauri.conf.json
src-tauri/.planning/debug/: parakeet-gather-index-oob.md
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/patches/parakeet-rs/: Cargo.toml  Cargo.toml.orig  README.md
src-tauri/patches/parakeet-rs/examples/: pyannote.rs  raw.rs
src-tauri/patches/parakeet-rs/src/: audio.rs  execution.rs  lib.rs  model_tdt.rs  parakeet_tdt.rs  timestamps.rs
src-tauri/patches/transcribe-rs/: Cargo.toml  Cargo.toml.orig
src-tauri/patches/transcribe-rs/src/engines/moonshine/: engine.rs  model.rs  streaming_engine.rs  streaming_model.rs
src-tauri/patches/transcribe-rs/src/engines/sense_voice/: engine.rs  model.rs
src-tauri/src/: audio.rs  correction_log.rs  corrections.rs  corrections_tests.rs  download.rs  filler.rs  filler_tests.rs  foreground.rs  history.rs  inject.rs  keyboard_hook.rs  lib.rs  main.rs  paths.rs  pill.rs  pipeline.rs  profiles.rs  transcribe.rs  transcribe_moonshine.rs  transcribe_parakeet.rs  tray.rs  updater.rs  vad.rs
src/components/: AllCapsToggle.tsx  AlwaysListenToggle.tsx  AutostartToggle.tsx  CheckmarkIcon.tsx  DictionaryEditor.tsx  FillerRemovalToggle.tsx  FirstRun.tsx  FrequencyBars.tsx  HotkeyCapture.tsx  ModelSelector.tsx  PrefixTextInput.tsx  ProcessingDots.tsx  ProfileSwitcher.tsx  RecordingModeToggle.tsx  Sidebar.tsx  ThemeToggle.tsx  UpdateBanner.tsx  WaveformCanvas.tsx
src/lib/: store.ts  updater.ts
test-fixtures/: BENCHMARK.md  generate-benchmark-wavs.ps1
(+293 files in other folders)
