[package]
name = "voice-to-text"
version = "0.1.0"
description = "VoiceType — offline voice dictation for Windows"
authors = []
edition = "2021"

[lib]
name = "voice_to_text_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.17"
rubato = "0.15"
hound = "3"
log = "0.4"
env_logger = "0.11"
# Requires: CUDA_PATH env var (CUDA Toolkit 11.7) + LIBCLANG_PATH (for bindgen) + CMAKE_CUDA_ARCHITECTURES=61
# First build takes 10-30 minutes (compiles whisper.cpp with CUDA via cmake)
whisper-rs = { version = "0.15", features = ["cuda"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
