[package]
name = "voice-to-text"
version = "0.1.0"
description = "VoiceType — offline voice dictation for Windows"
authors = []
edition = "2021"

[lib]
name = "voice_to_text_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["whisper"]
# Enable whisper-rs CUDA transcription. Requires:
#   - LIBCLANG_PATH (LLVM clang for bindgen)
#   - CUDA Toolkit 11.7 (CUDA_PATH)
#   - CMAKE_CUDA_ARCHITECTURES=61
# First build: 10-30 min (compiles whisper.cpp + CUDA kernels via cmake).
# Audio capture (cpal) works without this feature flag.
whisper = ["dep:whisper-rs", "dep:nvml-wrapper"]

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.17"
rubato = "0.15"
hound = "3"
log = "0.4"
env_logger = "0.11"
# Requires: CUDA_PATH env var (CUDA Toolkit 11.7) + LIBCLANG_PATH (for bindgen) + CMAKE_CUDA_ARCHITECTURES=61
# First build takes 10-30 minutes (compiles whisper.cpp with CUDA via cmake)
whisper-rs = { version = "0.15", features = ["cuda"], optional = true }
# NVML wrapper for runtime GPU detection (detect NVIDIA GPU presence without CUDA build)
nvml-wrapper = { version = "0.10", optional = true }
# Clipboard save/restore for text injection (always available — no whisper dependency)
arboard = "3"
# Keyboard simulation (Ctrl+V) for text injection
enigo = "0.6"
# Tokio time utilities (async sleep in RMS level stream loop)
# Tauri's async runtime is tokio — this makes the dependency explicit
tokio = { version = "1", features = ["time"] }
# Silero VAD V5 — neural speech/silence detection (ONNX Runtime downloaded at build time)
voice_activity_detector = "0.2.1"
# Regex engine for word-boundary corrections matching (corrections.rs)
regex = "1"
# HTTP client for model downloads (streaming)
reqwest = { version = "0.12", features = ["stream"] }
# SHA256 checksum validation for downloaded model files
sha2 = "0.10"
# Stream combinators — StreamExt for bytes_stream() in download.rs
futures-util = "0.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
