[package]
name = "voice-to-text"
version = "1.1.0"
description = "VoiceType — offline voice dictation for Windows"
authors = []
edition = "2021"

[lib]
name = "voice_to_text_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["whisper", "parakeet"]
# Enable whisper-rs CUDA transcription. Requires:
#   - LIBCLANG_PATH (LLVM clang for bindgen)
#   - CUDA Toolkit 11.7 (CUDA_PATH)
#   - CMAKE_CUDA_ARCHITECTURES=61
# First build: 10-30 min (compiles whisper.cpp + CUDA kernels via cmake).
# Audio capture (cpal) works without this feature flag.
whisper = ["dep:whisper-rs", "dep:nvml-wrapper"]
# Enable Parakeet TDT ONNX inference via parakeet-rs. Requires:
#   - ONNX Runtime libraries (downloaded automatically by ort build script)
#   - cuda feature enables GPU inference via ort/cuda
parakeet = ["dep:parakeet-rs"]

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
# Auto-update plugin (checks GitHub Releases for new versions)
tauri-plugin-updater = "2"
# Process control (app restart after update install)
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.17"
rubato = "0.15"
hound = "3"
log = "0.4"
env_logger = "0.11"
# Requires: CUDA_PATH env var (CUDA Toolkit 11.7) + LIBCLANG_PATH (for bindgen) + CMAKE_CUDA_ARCHITECTURES=61
# First build takes 10-30 minutes (compiles whisper.cpp with CUDA via cmake)
whisper-rs = { version = "0.15", features = ["cuda"], optional = true }
# NVML wrapper for runtime GPU detection (detect NVIDIA GPU presence without CUDA build)
nvml-wrapper = { version = "0.10", optional = true }
# Clipboard save/restore for text injection (always available — no whisper dependency)
arboard = "3"
# Keyboard simulation (Ctrl+V) for text injection
enigo = "0.6"
# Tokio time utilities (async sleep in RMS level stream loop)
# Tauri's async runtime is tokio — this makes the dependency explicit
tokio = { version = "1", features = ["time"] }
# Silero VAD V5 — neural speech/silence detection (ONNX Runtime downloaded at build time)
voice_activity_detector = "0.2.1"
# Regex engine for word-boundary corrections matching (corrections.rs)
regex = "1"
# HTTP client for model downloads (streaming)
reqwest = { version = "0.12", features = ["stream"] }
# SHA256 checksum validation for downloaded model files
sha2 = "0.10"
# Stream combinators — StreamExt for bytes_stream() in download.rs
futures-util = "0.3"
# Parakeet TDT ONNX inference (optional — gated by "parakeet" feature)
# Using 0.1.9 (not 0.3.x) to avoid ort version conflict with voice_activity_detector,
# which pins ort = "=2.0.0-rc.10". parakeet-rs 0.1.9 uses ort = "^2.0.0-rc.10".
# The cuda feature enables ort/cuda for GPU inference at runtime.
# API in 0.1.x: ParakeetTDT::from_pretrained(path, config), transcribe_samples(&mut self, ...)
# NOTE: "cuda" feature enabled — ort downloads pre-compiled CUDA binaries via download-binaries
# feature (same mechanism as whisper-rs). CUDA toolkit is already present (used by whisper).
# At runtime, ort uses CUDA EP with automatic CPU fallback if CUDA is unavailable.
parakeet-rs = { version = "0.1.9", features = ["cuda", "directml"], optional = true }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Dxgi",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
] }

# Patch esaxx-rs to use dynamic CRT (/MD) instead of static CRT (/MT).
# esaxx-rs 0.1.10 hardcodes .static_crt(true) in its build.rs, which compiles esaxx.cpp
# with /MT. onnxruntime.lib (from ort-sys) is compiled /MD. MSVC LNK2038 treats a
# /MT vs /MD mismatch as a fatal error that /NODEFAULTLIB cannot suppress.
# The local patch changes .static_crt(true) -> .static_crt(false) so esaxx uses /MD,
# matching onnxruntime.lib and whisper. No functional change — this only affects
# which CRT DLL is used at link time, and the binary already imports MSVCP140.dll.
[patch.crates-io]
esaxx-rs = { path = "patches/esaxx-rs" }
# Patch parakeet-rs to read vocab_size from config.json instead of hardcoding 8193.
# The parakeet-tdt-0.6b-v2 int8 model has vocab_size=1025; the hardcoded default causes
# blank_id=8192 which crashes the ONNX Gather node (valid range is [-1025,1024]).
parakeet-rs = { path = "patches/parakeet-rs" }
